--- a/sway/waybar/style.css
+++ b/sway/waybar/style.css
@@ -39,7 +39,7 @@ button {
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 button:hover {
     background: inherit;
-    box-shadow: inset 0 -3px #ffffff;
+    box-shadow: inset 0 -2px #ffffff;
 }
 
 #workspaces button {
@@ -56,9 +56,9 @@ button:hover {
     background-color: #64727D;
 }
 
-#workspaces button.urgent {
-    background-color: #eb4d4b;
-}
+/* #workspaces button.urgent { */
+/*     background-color: #eb4d4b; */
+/* } */
 
 #mode {
     background-color: #64727D;
