--- a/sway/waybar/style.css
+++ b/sway/waybar/style.css
@@ -104,10 +104,10 @@ button:hover {
     background-color: #64727D;
 }
 
-#battery.charging,
-#battery.plugged {
-    background-color: #26A65B;
-}
+/* #battery.charging, */
+/* #battery.plugged { */
+/*     background-color: #26A65B; */
+/* } */
 
 @keyframes blink {
     to {
@@ -118,7 +118,6 @@ button:hover {
 
 /* Using steps() instead of linear as a timing function to limit cpu usage */
 #battery.critical:not(.charging) {
-    background-color: #f53c3c;
     animation-name: blink;
     animation-duration: 0.5s;
     animation-timing-function: steps(12);
