--- a/sway/waybar/style.css
+++ b/sway/waybar/style.css
@@ -1,8 +1,7 @@
 * {
-    font-family: Ubuntu Nerd Font, monospace;
+    font-family: Ubuntu Nerd Font;
     font-size: 14px;
-    font-weight: 600;
-    color: #ECEFF4;
+    color: #a5abb6;
 }
 
 window#waybar {
@@ -10,19 +9,24 @@ window#waybar {
 }
 
 button {
-    box-shadow: inset 0 -3px transparent;
+    box-shadow: inset 0 2px transparent;
     border: none;
     border-radius: 0;
 }
 
-/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
-button:hover {
-    background: inherit;
-    box-shadow: inset 0 -2px #ffffff;
+.module {
+    margin: 0 .3rem;
+    padding: 0 .3rem;
 }
 
-.module {
-    margin: 0 .5rem;
+.modules:last-child>#workspaces {
+    margin-right: 0;
+}
+
+.module:hover,
+button:hover {
+    background: inherit;
+    box-shadow: inset 0 2px #64727D;
 }
 
 .modules-left>widget:first-child>#workspaces {
@@ -33,36 +37,24 @@ button:hover {
     margin-right: 0;
 }
 
-#workspaces button {
-    padding: 0 5px;
-    background-color: transparent;
+#workspaces {
+    padding: 0;
 }
 
-#workspaces button:hover {
-    background: rgba(0, 0, 0, 0.2);
+#workspaces:hover {
+    box-shadow: none;
+}
+
+#workspaces button {
+    padding: 0 0.5rem;
 }
 
 #workspaces button.focused {
-    background-color: #64727D;
-}
-
-#clock {
-    background-color: #64727D;
-}
-
-@keyframes blink {
-    to {
-        background-color: #ffffff;
-        color: #000000;
-    }
+    box-shadow: inset 0 2px #a5abb6;
 }
 
 #battery.critical:not(.charging) {
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: steps(12);
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
+    color: #bf616a;
 }
 
 #tray>.passive {
@@ -71,5 +63,4 @@ button:hover {
 
 #tray>.needs-attention {
     -gtk-icon-effect: highlight;
-    background-color: #eb4d4b;
 }
