ghostty and stuff

--- a/sway/waybar/style.css
+++ b/sway/waybar/style.css
@@ -64,3 +64,8 @@ button:hover {
 #tray>.needs-attention {
     -gtk-icon-effect: highlight;
 }
+
+#mode {
+    font-style: italic;
+    color: #bf616a;
+}
