--- a/linux/waybar/style.css
+++ b/linux/waybar/style.css
@@ -1,11 +1,11 @@
 * {
     font-family: Ubuntu Nerd Font;
     font-size: 14px;
-    color: #a5abb6;
+    color: #D8DEE9;
 }
 
 window#waybar {
-    background-color: #161821;
+    background-color: #2E3440;
 }
 
 button {
@@ -26,7 +26,7 @@ button {
 .module:hover,
 button:hover {
     background: inherit;
-    box-shadow: inset 0 2px #64727D;
+    box-shadow: inset 0 2px #D8DEE9;
 }
 
 .modules-left>widget:first-child>#workspaces {
